Create python cotroll script

--- a/RemoteCameraApp/app/src/main/res/layout/activity_main.xml
+++ b/RemoteCameraApp/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,17 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
     </FrameLayout>
+
+
+    <androidx.camera.view.PreviewView
+        android:id="@+id/camera"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:contentDescription="Preview_area" />
 </LinearLayout>
